TEST_PROGRAMS/VALID/xoey_zhang/valid_factorial.min
# Computes the factorial of x
var x: int;
var result: float;

read x;
result = 1.0;

while x do
	result = result * x;
	result = x - 1;
done

print y;
