TEST_PROGRAMS/INVALID/mathieu_boucher/invalid2.min
#wrong number formats

var x : int;
var y : float;
var z : float;

x = 05;
y = -00.12;
z = -.12;
z = -0012.;


